force-app/main/default/objects/DA_Policy__c/DA_Policy__c.object-meta.xml
<CustomObject>
    <description>Daily Allowance policy (BRD 20.2). KPIs with half-day/full-day targets drive full/half DA; linked to the employee claim policy.</description>
    <label>DA Policy</label>
    <nameField>
        <label>DA Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DA Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>