force-app/main/default/objects/DA_Policy__c/fields/Air_Class__c.field-meta.xml
<CustomField>
    <fullName>Air_Class__c</fullName>
    <label>Air Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Economy</fullName><default>false</default><label>Economy</label></value>
            <value><fullName>Economy (with approval)</fullName><default>false</default><label>Economy (with approval)</label></value>
            <value><fullName>NA</fullName><default>false</default><label>NA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>