force-app/main/default/objects/DA_Policy__c/fields/Approval_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approval_Authority__c</fullName>
    <label>Approval Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(approver designation)</fullName><default>false</default><label>(approver designation)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>