force-app/main/default/objects/DA_Policy__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(designation list)</fullName><default>false</default><label>(designation list)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>