force-app/main/default/objects/DA_Policy__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>GT Sales</fullName><default>false</default><label>GT Sales</label></value>
            <value><fullName>MT Sales</fullName><default>false</default><label>MT Sales</label></value>
            <value><fullName>Non-Sales</fullName><default>false</default><label>Non-Sales</label></value>
            <value><fullName>Off-Roll (SR/MES)</fullName><default>false</default><label>Off-Roll (SR/MES)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>