force-app/main/default/objects/DA_Policy__c/fields/Ex_HQ_Distance_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Ex_HQ_Distance_Threshold__c</fullName>
    <label>Ex-HQ Distance Threshold (Km)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>