force-app/main/default/objects/DA_Policy__c/fields/Expense_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Expense_Eligibility__c</fullName>
    <description>Employee claim policy that holds the DA amount.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Eligibility</label>
    <referenceTo>Expense_Eligibility__c</referenceTo>
    <relationshipName>DA_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>