force-app/main/default/objects/DA_Policy__c/fields/Food_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Food_Allowance__c</fullName>
    <label>Food Allowance</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>