force-app/main/default/objects/DA_Policy__c/fields/Four_Wheeler_Rate_Km__c.field-meta.xml
<CustomField>
    <fullName>Four_Wheeler_Rate_Km__c</fullName>
    <label>Four-Wheeler Rate/Km</label>
    <type>Currency</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>