force-app/main/default/objects/DA_Policy__c/fields/Grade_Class__c.field-meta.xml
<CustomField>
    <fullName>Grade_Class__c</fullName>
    <label>Grade / Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(grade list)</fullName><default>false</default><label>(grade list)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>