force-app/main/default/objects/DA_Policy__c/fields/Hotel_Cap_Metro__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cap_Metro__c</fullName>
    <label>Hotel Cap - Metro</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>