force-app/main/default/objects/DA_Policy__c/fields/Imprest_Limit__c.field-meta.xml
<CustomField>
    <fullName>Imprest_Limit__c</fullName>
    <label>Imprest Limit</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>