force-app/main/default/objects/DA_Policy__c/fields/Is_TA_Claim__c.field-meta.xml
<CustomField>
    <fullName>Is_TA_Claim__c</fullName>
    <label>Is TA Claim</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>