force-app/main/default/objects/DA_Policy__c/fields/Local_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Local_Conveyance__c</fullName>
    <label>Local Conveyance (Ex-HQ)</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>