force-app/main/default/objects/DA_Policy__c/fields/Meter_Reading_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading_Allowed__c</fullName>
    <label>Meter Reading Allowed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>