force-app/main/default/objects/DA_Policy__c/fields/Mobile_and_Internet__c.field-meta.xml
<CustomField>
    <fullName>Mobile_and_Internet__c</fullName>
    <label>Mobile &amp; Internet</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>