force-app/main/default/objects/DA_Policy__c/fields/Remark_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Remark_Mandatory__c</fullName>
    <label>Remark Mandatory</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>