force-app/main/default/objects/DA_Policy__c/fields/Train_Class__c.field-meta.xml
<CustomField>
    <fullName>Train_Class__c</fullName>
    <label>Train Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1st AC</fullName><default>false</default><label>1st AC</label></value>
            <value><fullName>2 Tier AC</fullName><default>false</default><label>2 Tier AC</label></value>
            <value><fullName>3 Tier AC</fullName><default>false</default><label>3 Tier AC</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>