force-app/main/default/objects/DA_Policy__c/fields/Travel_Purpose_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Travel_Purpose_Mandatory__c</fullName>
    <label>Travel Purpose Mandatory</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>